--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.41 2009/09/21 14:45:45 ith Exp $
+% $Id: mainintro.tex,v 1.42 2009/09/28 10:59:21 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.41 2009/09/21 14:45:45 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.42 2009/09/28 10:59:21 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -447,7 +447,7 @@ Observations require that inflation lasted at least long enough that all the
 scales we measure today were previously inside the horizon. 
 % 
 \begin{figure}
- \missingfigure{Add figure of comoving scales and changing Hubble radius.}
+ \includegraphics[width=\textwidth]{graphs/scales.pdf}
  \caption{Comoving scales that have recently entered the horizon would
 previously have been inside the horizon if the inflationary period extended far
 enough into the past.}
