--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.43 2009/09/28 11:01:26 ith Exp $
+% $Id: mainintro.tex,v 1.44 2009/09/28 11:05:33 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.43 2009/09/28 11:01:26 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.44 2009/09/28 11:05:33 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -823,7 +823,7 @@ annihilation operators. They act on quantum states by adding or
 removing particles. The zero particle vacuum state is such that
 % 
 \begin{equation}
- \hat{a}^\dagger|0> = |0>\,,\quad \hat{a}|0> = 0\,.
+ \hat{a}^\dagger|0\rangle = |1\rangle\,,\quad \hat{a}|0\rangle = 0\,.
 \end{equation}
 % 
 In Minkowski space these operators have the usual commutation relations
