Began rewrite of discussion.

--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.41 2009/09/27 17:37:19 ith Exp $
+% $Id: multibrane.tex,v 1.42 2009/09/28 13:54:13 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.41 2009/09/27 17:37:19 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.42 2009/09/28 13:54:13 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -1268,7 +1268,8 @@ that results in a detectable tensor signal.
 
 
 The relativistic DBI brane scenario represents an attractive, 
-string-inspired realisation of the inflationary scenario. Recent
+string-inspired realisation of the inflationary scenario. In
+Chapter~\ref{ch:dbi} we showed that
 cosmological data has placed very strong constraints on the simplest 
 models based on a single ${\rm D3}$-brane. The strength 
 of these constraints follows from field-theoretic upper limits 
@@ -1279,33 +1280,31 @@ for considering generalisations of the scenario, in particular to
 multi-brane configurations. 
 
 
-In this paper we have identified a phenomenological class of 
+In this chapter we have identified a phenomenological class of 
 effective actions for which the constraints 
 on $r$ are relaxed if significant (and detectable) 
 non-Gaussian curvature perturbations are generated during inflation. 
-Included in this class is the relativistic limit of the 
-action associated with $n$ 
-coincident branes in the small $n$ limit. Moreover 
-we have found that such an effective action for arbitrary, finite $n$ 
-can be expressed directly in terms of the corresponding action 
-for the $n = 2$ model, due to the fact that the spin-$1/2$ representation
-of $SU(2)$ is actually the fundamental one. This allows us to construct models for various values of
-$n$ using the
-two-brane action and the iteration equations.
-Physically these brane configurations typically 
-have a smaller sound speed than the single brane models due to
-the different structure of their action. This differing structure is also
-manifest in the non-relativistic limit - since the non-Abelian nature of the theory
-introduces new 'potential terms' that couple to the usual kinetic components of the 
-action. In some cases this extra potential could help to further flatten the inflaton potential, 
-whereas in other cases it will make it significantly steeper. An indepth analysis of slow roll in
-such models would be welcome.
-Their backreaction is also significantly smaller than other multi-brane 
-configurations, and therefore this relaxes the amount of tuning 
-required for the background charge.
+We have provided approximate and exact derivations of this class which coincide
+in the relativistic limit. It would be interesting to 
+investigate whether the effective action (\ref{eq:gensoln-multi}) with values
+of $l \ne - 1/2$ arises in string-inspired settings or elsewhere.
 
+In Section~\ref{sec:multibranes-multi} we introduced the coincident $n$ branes
+model of Thomas and Ward \cite{thomasward}. We examined the predictions of this
+model in two limit, arbitrarily large and small finite $n$. The large $n$ model
+is similar to the single brane case. Using the results of
+Section~\ref{sec:relaxing-dbi} we showed that the large $n$ case is strongly
+constrained by current observations.
 
-We then proceeded to consider the question of whether the upper limits on 
+The finite $n$ model is of more theoretical interest as it exhibits the
+non-Abelian nature of the scenario. In \Rref{hltw} a recursive approach was
+derived to calculate the pressure and energy densities for $n>2$ models using
+the $n=2$ results. In the relativistic limit these finite $n$ models are
+included in the class of actions derived in Section~\ref{sec:relaxing-multi}
+which relax the bounds on $r$. The backreaction of these models can also be
+kept well under control.
+
+We proceeded to consider the question of whether the upper limits on 
 $r$ could be relaxed to such an extent 
 that a background of primordial gravitational waves 
 might be detectable in future CMB experiments. The vast majority of 
@@ -1315,11 +1314,11 @@ found that a detectable signal is possible, in principle,
 for typical string-theoretic parameter values 
 if the number of coincident branes, $n$, is either $2$ or $3$. 
 This is consistent with known F-theory configurations and 
-current WMAP3 limits on the non-Gaussianity. Furthermore, 
+current WMAP5 limits on the non-Gaussianity. Furthermore, 
 we found that the level of non-Gaussianity must exceed $\fnleq 
 \lsim -70$ if such configurations are to generate a detectable tensor 
 signal. This is well within the projected sensitivity 
-of the Planck satellite.   
+of the Planck satellite \cite{planck}.   
 
 
 Our analysis invoked an $AdS_5 \times X_5$ warped throat geometry. However we 
@@ -1336,9 +1335,7 @@ inflaton potential are made. In particular, it would be interesting
 to employ the techniques developed in
 \cite{bean,Peiris:2007gz,Lorenz:2007ze,Bean:2007eh,Bean:2008ga} 
 to identify the ranges of parameter space that are consistent 
-with current cosmological observations. It would also be interesting to 
-investigate whether the effective action (\ref{eq:gensoln-multi}) with values of 
-$l \ne - 1/2$ arises in other string-inspired settings. 
+with current cosmological observations.  
 
 
 
