--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.42 2009/09/28 13:54:13 ith Exp $
+% $Id: multibrane.tex,v 1.43 2009/09/28 14:06:43 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.42 2009/09/28 13:54:13 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.43 2009/09/28 14:06:43 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -1337,5 +1337,13 @@ to employ the techniques developed in
 to identify the ranges of parameter space that are consistent 
 with current cosmological observations.  
 
-
+In Part~\ref{part:dbi} of this work we have concentrated on using theoretical
+techniques to constrain inflationary models. In Chapter~\ref{ch:dbi} we showed
+how the single-brane UV DBI model is subject to two incompatible bounds on the
+tensor-scalar ratio. In Chapter~\ref{ch:multi} we described a class of actions
+which would ease those bounds. We examined the coincident $n$ branes model and
+showed that the scenario in which an observable tensor signal is produced is
+strongly constrained by current observations. In Part~\ref{part:numerical}
+numerical techniques will be developed with the goal of constraining
+inflationary models using perturbation theory.
 
