Changed some repeated text.

--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.43 2009/09/28 14:06:43 ith Exp $
+% $Id: multibrane.tex,v 1.44 2009/09/28 15:08:14 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.43 2009/09/28 14:06:43 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.44 2009/09/28 15:08:14 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -1079,15 +1079,13 @@ takes the constant value
 \YAdS \equiv \frac{4\pi^2 g_s N}{(n-1)^4 \Vol} \,.
 \end{equation}
 % 
-In what follows, we chose natural field-theoretic values for the volume, 
+As before, we chose natural field-theoretic values for the volume, 
 $\Vol \simeq \pi^3$, and the string coupling, 
 $g_s \simeq 10^{-2}$, and further assume that 
-$(n-1)^2 Y \gg 1$. It is possible that observations will probe a 
-range of scales $\Delta \N_* \simeq 1$, 
-but it is more realistic to require that 
-the tensor-scalar ratio should not change significantly over the 
-entire range of scales that are accessible to cosmological observation,  
-which corresponds to $\Delta \N_* \simeq 4$.
+$(n-1)^2 Y \gg 1$. 
+We again assume that the tensor-scalar ratio should not change significantly
+over the entire range of scales that are accessible to cosmological
+observation, which corresponds to $\Delta \N_* \simeq 4$. 
 After substitution of the above values, therefore, 
 the bound (\ref{eq:actualLH-multi}) simplifies to
 %  
@@ -1097,15 +1095,11 @@ r_* < 2.8 \times 10^{-13} \frac{N}{(n-1)^2} (\fnleq)^2 \,.
 \end{equation}
 % 
 
-
-Global tadpole cancellation constrains the magnitude of
-the background charge $N$ in terms of the topology of 
-a Calabi-Yau four-fold such that $N < \chi /
-24$, where $\chi$ is the Euler characteristic of the four-fold
-\cite{witten1,witten2,witten3,sethi,gkp,klemm}. 
-The  maximal known value of the Euler number for such four-folds arises from 
-hypersurfaces in weighted projective spaces and is given by 
-$\chi = 1, 820,448$ \cite{klemm}. This implies the upper limit of 
+As in Section~\ref{sec:twlargen-multi}
+global tadpole cancellation constrains the magnitude of
+the background charge $N$ such that $N < \chi /
+24$. 
+The maximal known value of the Euler number implies the upper limit of 
 % 
 \begin{equation}
 \label{eq:Nlimit-multi} 
@@ -1340,7 +1334,8 @@ with current cosmological observations.
 In Part~\ref{part:dbi} of this work we have concentrated on using theoretical
 techniques to constrain inflationary models. In Chapter~\ref{ch:dbi} we showed
 how the single-brane UV DBI model is subject to two incompatible bounds on the
-tensor-scalar ratio. In Chapter~\ref{ch:multi} we described a class of actions
+tensor-scalar ratio. In Chapter~\ref{ch:multibrane} we described a class of
+actions
 which would ease those bounds. We examined the coincident $n$ branes model and
 showed that the scenario in which an observable tensor signal is produced is
 strongly constrained by current observations. In Part~\ref{part:numerical}
