--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.44 2009/09/28 15:08:14 ith Exp $
+% $Id: multibrane.tex,v 1.45 2009/09/28 15:12:06 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.44 2009/09/28 15:08:14 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.45 2009/09/28 15:12:06 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -1124,7 +1124,7 @@ $(r \gsim 0.02 )$ \cite{planck}. On the other hand,
 the projected sensitivity of future CMB polarization experiments 
 indicates that a background of primordial 
 gravitational waves with $r_* \gsim 10^{-4}$ 
-should be observable \cite{songknox,vpj}. In view of this, 
+should be observable \cite{songknox,vpj, Baumann:2008aq}. In view of this, 
 it is interesting to consider whether
 a detectable gravitational wave background could in principle 
 be generated in this class of multi-brane inflationary 
