Changed gauss to Gauss.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.45 2009/09/28 11:05:20 ith Exp $
+% $Id: dbi-intro.tex,v 1.46 2009/09/28 16:03:43 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.45 2009/09/28 11:05:20 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.46 2009/09/28 16:03:43 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -206,14 +206,14 @@ signal that is predicted to occur rarely in string theory would make the theory 
 % Limiting the parameter space of an acceptable string theory to an ever smaller
 % region would also
 % decrease its viability even if it could not be ruled out. 
-One observational parameter suited to this is the non-gaussianity
+One observational parameter suited to this is the non-Gaussianity
 parameter $\fnl$ as introduced in Section~\ref{sec:fnl-intro}.
 Standard inflation models, including the single field slow roll model described in
 Section~\ref{sec:slowroll-intro}, produce small amounts of $\fnlloc$, whereas
-certain classes of string theory inspired models have large non-gaussian
+certain classes of string theory inspired models have large non-Gaussian
 signatures. 
 % While not exclusively a string theory effect, a detection of or
-% failure to detect non-gaussianity would rule in and out large classes of
+% failure to detect non-Gaussianity would rule in and out large classes of
 % models.
 
 \subsection{Extra dimensions}
@@ -667,7 +667,7 @@ the sound horizon $k c_s = aH$.
 A further important consequence of a small sound speed is that departures  
 from purely Gaussian statistics may be large 
 \cite{brane6,brane11,lidser3,chenetal}. 
-DBI inflation produces non-gaussianity maximised in the equilateral
+DBI inflation produces non-Gaussianity maximised in the equilateral
 configuration and the leading contribution is in the form of
 \eq{eq:fnldefn-dbiintro}. 
 When $c_s\PX=1$ the second term in 
@@ -679,7 +679,7 @@ When $c_s\PX=1$ the second term in
 \fnleq \simeq -\frac{1}{3} \left( \frac{1}{c_s^2} -1 \right) \,.
 \end{equation}
 % 
-When $c_s\ll1$ large amounts of non-gaussianity are produced.
+When $c_s\ll1$ large amounts of non-Gaussianity are produced.
 
 For a homogeneous field $2X = \dot{\vp}^2$ so from \eq{eq:csdefn-dbiintro} we
 get
@@ -776,8 +776,8 @@ early universe using string theory. In compactifying from 10 dimensions to 4,
 complicated geometries and additional fluxes must be used to stabilise the
 remaining moduli fields. 
 The DBI scenario is an example of a non-canonical inflationary model. With a
-small sound speed significant amounts of non-gaussianity can be produced. This
-non-gaussianity can be related to the brane tension and tensor-scalar ratio
+small sound speed significant amounts of non-Gaussianity can be produced. This
+non-Gaussianity can be related to the brane tension and tensor-scalar ratio
 through \eq{eq:approxlyth-dbiintro}. In the next chapter we will derive two
 competing bounds on $r$ which will tightly constrain the parameter space for
 DBI models.
