--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.46 2009/09/27 17:54:58 ith Exp $
+% $Id: dbi.tex,v 1.47 2009/09/28 16:03:43 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.46 2009/09/27 17:54:58 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.47 2009/09/28 16:03:43 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -1010,7 +1010,7 @@ The warped throat is six-dimensional so it is natural to consider the case when
 the D3-brane is not fixed on the radial trajectory and this is done in
 Refs.~\cite{spinflation} and \cite{Huang:2007hh}. Increasing the degrees of
 freedom introduces the possibility of entropy mode production. There is a
-change in the predictions for the amount and type of non-gaussianity produced
+change in the predictions for the amount and type of non-Gaussianity produced
 and the constraints on $r$ can be eased \cite{Arroja:2008yy, Langlois:2009ej,
 Langlois:2008qf, Langlois:2008wt, Mizuno:2009mv, Mizuno:2009cv}. Differences in
 the bi- and tri-spectra could enable multi-field DBI models to be distinguished
